@@ -15,12 +15,13 @@ import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.level.dimension.DimensionType;
 import net.minecraft.world.level.levelgen.*;
 
-import java.util.Collections;
+import java.util.Map;
 import java.util.Optional;
 import java.util.OptionalLong;
 import java.util.function.Function;
 
-public abstract class AetherWorldProvider extends SmartRegistryWriteOps<JsonElement> {
+public abstract class AetherWorldProvider extends SmartRegistryWriteOps<JsonElement>
+{
     private static final SurfaceRules.RuleSource GRASS_BLOCK = makeStateRule(AetherBlocks.AETHER_GRASS_BLOCK.get().defaultBlockState().setValue(AetherBlockStateProperties.DOUBLE_DROPS, true));
     private static final SurfaceRules.RuleSource DIRT = makeStateRule(AetherBlocks.AETHER_DIRT.get().defaultBlockState().setValue(AetherBlockStateProperties.DOUBLE_DROPS, true));
     private static final SurfaceRules.RuleSource QUICKSOIL = makeStateRule(AetherBlocks.QUICKSOIL.get().defaultBlockState().setValue(AetherBlockStateProperties.DOUBLE_DROPS, true));
@@ -57,7 +58,10 @@ public abstract class AetherWorldProvider extends SmartRegistryWriteOps<JsonElem
 
     protected NoiseGeneratorSettings aetherNoiseSettings() {
         return new NoiseGeneratorSettings(
-                new StructureSettings(Optional.empty(), Collections.emptyMap()),
+                new StructureSettings(Optional.empty(), Map.of(
+                        //AetherStructures.BRONZE_DUNGEON_INSTANCE, new StructureFeatureConfiguration(6, 4, 16811681)//,
+                        //AetherStructures.GOLD_DUNGEON.get(), new StructureFeatureConfiguration(24, 12, 120320420)
+                )),
                 new NoiseSettings(
                         0,
                         128,
